fixing on mobile

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -51,8 +51,8 @@
   }
 
   .profile {
-    height: 400px;
-    width: auto;
+    height: auto;
+    width: 40%;
     margin-top: 4vh;
     margin-left: -4vw;
     border-radius: 1%;
@@ -70,6 +70,11 @@
 
   .medium {
     font-size: 4rem;
+  }
+
+  .home {
+    float: right;
+    width: 50%;
   }
 
   .formcolor {
@@ -109,19 +114,44 @@
     right: 25%;
   }
 
-  @media only screen and (max-width: 425px) {
-    .title {
-      display: none;
-    }
-  }
-
-  @media only screen and (max-width:1000px) {
+  @media only screen and (max-width:1024px) {
     .profile {
       height: 200px;
       width: auto;
+      float: none;
     }
     .huge {
       font-size: 3rem;
+      float: none;
+      width: 100%;
+    }
+    .medium {
+      font-size: 2rem;
+      float: none;
+    }
+    .home {
+      float: none;
+      margin-left: 25%;
+    }
+  }
+
+  @media only screen and (max-width:425px) {
+    .profile {
+      height: 200px;
+      width: auto;
+      float: none;
+    }
+    .huge {
+      font-size: 2rem;
+      width: 100%;
+    }
+    .medium {
+      font-size: 2rem;
+      width: 100%;
+    }
+    .home {
+      float: none;
+      margin-left: 25%;
     }
   }
 
